appId: com.assesment.orderme
onFlowStart:
  - runFlow: ../helpers/_bootstrap.yaml
---
- tapOn:
    id: "loginLaterButton"
- tapOn:
    id: "Beauty & Essex"
- tapOn: "Detect table"
- tapOn:
    id: "tableNumberTextField"
- inputText: "4"
- tapOn: "Select table"
- assertVisible: "Table #4"
