appId: com.assesment.orderme
onFlowStart:
  - runFlow: ../helpers/_bootstrap.yaml
---
- tapOn: "Login Later"
- scroll
- tapOn: "Romanov"
- tapOn: "Detect table"
- tapOn: "Table #"
- inputText: "4"
- tapOn: "Select table"
- assertVisible: "Table #4"


